# master-summarizer

./: .env.example  .gitignore  AGENTS.md  Project.md  README.md  pyproject.toml
prompts/: central_summarization.md  chunk_summarization.md  manual_style_guide.md  preprocessing.md  reviewer.md  slide_generation.md  style_learning.md
review/: architecture_and_prompts.md
src/: config.py  main.py  models.py  opencode_client.py
src/agents/: base.py  central_summarizer.py  chunk_summarizer.py  chunker.py  preprocessor.py  reviewer.py  slide_generator.py  style_learner.py
src/parsers/: docx_parser.py  pdf_parser.py
src/storage/: archiver.py  document_store.py  vector_store.py
src/utils/: provenance.py  quality.py  token_budget.py
tests/: test_live.py  test_pipeline_stages.py
